// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertMovieModal shoud match first snepshot: first 1`] = `
<ModalWrapper
  onCloseModal={[Function]}
>
  <div
    className="alert-movie-modal__logo"
  >
    <CheckboxIcon
      isLarge={true}
    />
  </div>
  <div
    className="alert-movie-modal__title"
  >
    CONGRADULATIONS !
  </div>
  <div
    className="alert-movie-modal__message"
  >
    alert message
  </div>
</ModalWrapper>
`;

exports[`AlertMovieModal shoud match second snepshot: second 1`] = `
<ModalWrapper
  onCloseModal={[Function]}
>
  <div
    className="alert-movie-modal__logo"
  >
    !
  </div>
  <div
    className="alert-movie-modal__title"
  >
    SOMETHING WENT WRONG !
  </div>
  <div
    className="alert-movie-modal__message"
  >
    alert message
  </div>
</ModalWrapper>
`;
